  * rails g destroy works properly with devise generators (by github.com/andmej)
  * before_failure callbacks should work on test helpers (by github.com/twinge)
  * rememberable cookie now is httponly by default (by github.com/JamesFerguson)
  * Add missing confirmation_keys (by github.com/JohnPlummer)
  * Ensure after_* hooks are called on RegistrationsController
  * When using database_authenticatable Devise will now only create an email field when appropriate (if using default authentication_keys or custom authentication_keys with email included) (by github.com)

* deprecations
  * Deprecated anybody_signed_in? in favor of signed_in? (by github.com/gavinhughes)
  * Removed --haml and --slim view templates

== 1.2.rc

* deprecations
  * cookie_domain is deprecated in favor of cookie_options
  * after_update_path_for can no longer be defined in ApplicationController

* enhancements
  * Added OmniAuth support
  * Added ORM adapter to abstract ORM iteraction
  * sign_out_via is available in the router to configure the method used for sign out (by github.com/martinrehfeld)
  * Improved Ajax requests handling in failure app (by github.com/spastorino)
  * Added request_keys to easily use request specific values (like subdomain) in authentication
  * Increased the size of friendly_token to 60 characters (reduces the chances of a successful brute attack)
  * Ensure the friendly token does not include "_" or "-" since some e-mails may not autolink it properly (by github.com/rymai)
  * Extracted encryptors into :encryptable for better bcrypt support
  * :rememberable is now able to use salt as token if no remember_token is provided
  * Store the salt in session and expire the session if the user changes his password
  * Allow :stateless_token to be set to true avoiding users to be stored in session through token authentication
  * cookie_options uses session_options values by default